src/test/deca/syntax/valid/provided/instanceoftest.deca
{
(int) (x);
x instanceof equipe;

}

