src/test/deca/syntax/invalid/provided/erreurcasting.deca
{
x = (float) 101100010001010;}
